# MaoniOfLife

./: .cproject  .project  CMakeLists.txt  README
CMake/: FindMaoni.cmake
include/: ca_ruleset.hpp  cellular_automaton.hpp  exercise.hpp  game_of_life.hpp  simple_1d_ca.hpp  simple_cell.hpp
include/.svn/: entries
include/.svn/text-base/: cellular_automaton.hpp.svn-base  custom_ca.hpp.svn-base  exercise.hpp.svn-base  simple_1d_ca.hpp.svn-base  simple_cell.hpp.svn-base  vmml_includes.hpp.svn-base
src/: ca_ruleset.cpp  custom_ca.cpp  exercise.cpp  game_of_life.cpp  main.cpp  simple_1d_ca.cpp
src/.svn/: entries
src/.svn/text-base/: custom_ca.cpp.svn-base  exercise.cpp.svn-base  game_of_life.cpp.svn-base  main.cpp.svn-base  simple_1d_ca.cpp.svn-base  simple_cell.cpp.svn-base
